# panaversity-hackathon-I

./: .gitignore  GEMINI.md  PROJECT_ANALYSIS.md
--path/: authentication.skill
.claude/: BACKEND_RAG_DEEP_ANALYSIS.md  DATABASE_CONFIGURATION_STATUS.md  RAG_INTEGRATION_COMPLETION_REPORT.md
.claude/agents/: rag-developer.md  textbook-auditor.md
.claude/skills/: docusaurus-config-expert.md  rag-technical-standards.md  textbook-content-standards.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env  .env.example  BACKEND_STATE_REPORT.md  FIXES_APPLIED.md  README.md  TESTING_STATUS.md  pyproject.toml
backend/auth/: auth-schema.ts  auth.ts  drizzle.config.ts  index.ts  package-lock.json  package.json  test-db-nonpooler.ts  test-db.ts  tsconfig.json
backend/auth/drizzle/: 0000_huge_typhoid_mary.sql
backend/auth/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/data/: index_metadata.json
backend/rag_backend/: config.py  main.py
backend/rag_backend/agents/: README.md  __init__.py  guardrails.py  orchestrator.py  sub_agents.py  tools.py
backend/rag_backend/models/: __init__.py  chat.py  chunk.py  health.py  session.py
backend/rag_backend/routers/: __init__.py  chat.py  health.py
backend/rag_backend/services/: __init__.py  auth_verifier.py  database_service.py  embedding_service.py  embedding_service_multi.py  llm_service.py  llm_service_multi.py  rag_pipeline.py  vector_store.py
backend/rag_backend/utils/: __init__.py  chunking.py  error_handlers.py  rate_limiter.py
backend/scripts/: debug_env.py  index_docs.py  quick_test.py  setup_database.py  setup_qdrant.py  test_detailed.py  test_full_flow.py  test_minimal.py  test_rag_direct.py
backend/src/: __init__.py
backend/src/models/: session.py
backend/src/services/: database_service.py
physical-ai-textbook/: .lighthouserc.js  docusaurus.config.ts  drizzle.config.ts  jest.config.js  package-lock.json  package.json  sidebars.ts
physical-ai-textbook/docs/: intro.md
physical-ai-textbook/drizzle/: 0000_bitter_nightshade.sql
physical-ai-textbook/src/: setupTests.ts
specs/001-textbook-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-integration/: data-model.md  plan.md  quickstart.md  rag-agent-architecture.md  research.md  spec.md  sub-agents-skills-guide.md  tasks.md
(+78 files in other folders)
